@@ -27,6 +27,15 @@
     </text>
   </lang>
   <autodetect>
+    <general>
+      <model>hp color LaserJet 4600</model>
+      <description>Hewlett-Packard color LaserJet 4600</description>
+      <cmdset>PJL,MLC,BIDI-ECP,POSTSCRIPT,PJL,PCLXL,PCL</cmdset>
+      <manufacturer>Hewlett-Packard</manufacturer>
+    </general>
+    <snmp>
+      <description>hp color LaserJet 4600</description>
+    </snmp>
   </autodetect>
   <functionality>A</functionality>
   <driver>Postscript</driver>
