@@ -1,3 +1,8 @@
+2005-02-10  Tim Waugh <twaugh@redhat.com>
+
+	* printer/HP-Color_LaserJet_4600.xml: Added IEEE 1284 information (RH
+	  bug #147648).
+
 2005-02-08  Tim Waugh <twaugh@redhat.com>
 
 	* printer/HP-DeskJet_6540.xml: Corrected IEEE 1284 information (RH
